--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <html>
 
 <style>
-#box {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  background-color: #ccc;
+[draggable=true] {
+  cursor: grab;
+  
+  &:active {
+    cursor: grabbing;
+  }
+}
+
+#target {
+  padding: 2em;
+}
+
+
+/* Unrelated Pen Styles*/
+html,
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  padding: 1em;
+  box-sizing: border-box;
 }
 </style>
 <script>
-    window.onload = function() {
-  // find the element that you want to drag.
-  var box = document.getElementById('box');
-  
-  /* listen to the touchmove event,
-  every time it fires, grab the location
-  of touch and assign it to box */
-  
-  box.addEventListener('touchmove', function(e) {
-    // grab the location of touch
-    var touchLocation = e.targetTouches[0];
-    
-    // assign box new coordinates based on the touch.
-    box.style.left = touchLocation.pageX + 'px';
-    box.style.top = touchLocation.pageY + 'px';
-  })
- /* record the position of the touch
-  when released using touchend event.
-  This will be the drop position. */
-  
-  box.addEventListener('touchend', function(e) {
-    // current box position.
-    var x = parseInt(box.style.left);
-    var y = parseInt(box.style.top);
-  }) 
+    /**
+* https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API#Handle_the_drop_effect
+*/
+
+function dragstart_handler(ev) {
+ // Add the target element's id to the data transfer object
+ ev.dataTransfer.setData("text/plain", ev.target.id);
+ ev.dataTransfer.dropEffect = "move";
 }
+function dragover_handler(ev) {
+ ev.preventDefault();
+ // Set the dropEffect to move
+ ev.dataTransfer.dropEffect = "move"
+}
+function drop_handler(ev) {
+ ev.preventDefault();
+ // Get the id of the target and add the moved element to the target's DOM
+ var data = ev.dataTransfer.getData("text/plain");
+ ev.target.appendChild(document.getElementById(data));
+}
+
+window.addEventListener('dragstart', dragstart_handler)
+window.addEventListener('dragover', dragover_handler)
+window.addEventListener('drop', drop_handler)
+
+
 </script>
 <body>
-    <div id="container">
-        <div id="box"></div>
-    </div>
+    <div>
+      <h1>Drag and Drop API</h1>
+      <p>Buffer element</p>
+      <p id="p1" draggable="true">This element is draggable.</p>
+      <div id="target" style="border: 1px dashed gray;">
+        Drop Zone
+      </div>
+  </div>
 </body>
 
 </html>
