--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <html>
 
 <style>
-#box {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  background-color: #ccc;
-}
+
 [draggable=true] {
   cursor: grab;
   
@@ -22,7 +17,7 @@
 </style>
 <body>
     <div id="container">
-      <div id="box" draggable="true"></div>
+      <div id="box" draggable="true">AAAAA</div>
     </div>
 </body>
 <script>
